Update dial model, templates.
- add openvpn subnet settings.
- add openvpn auth script.
- update templates structure.

--- a/website/vpn/dial/templates/dial/server.conf
+++ b/website/vpn/dial/templates/dial/server.conf
@@ -11,7 +11,7 @@ local 0.0.0.0
 # on the same machine, use a different port
 # number for each one.  You will need to
 # open up this port on your firewall.
-port 443
+port 1194
 
 # TCP or UDP server?
 proto udp
@@ -48,8 +48,8 @@ dev tun
 # OpenVPN can also use a PKCS #12 formatted key file
 # (see "pkcs12" directive in man page).
 ca ca.crt
-cert labs0.crt
-key labs0.key  # This file should be kept secret
+cert server.crt
+key server.key  # This file should be kept secret
 
 # Diffie hellman parameters.
 # Generate your own with:
@@ -65,7 +65,7 @@ dh dh2048.pem
 # Each client will be able to reach the server
 # on 10.8.0.1. Comment this line out if you are
 # ethernet bridging. See the man page for more info.
-server 10.7.7.0 255.255.255.0
+server {{ ipool }}
 
 # Maintain a record of client <-> virtual IP address
 # associations in this file.  If OpenVPN goes down or
@@ -81,18 +81,7 @@ ifconfig-pool-persist ipp.txt
 # to know to route the OpenVPN client
 # address pool (10.8.0.0/255.255.255.0)
 # back to the OpenVPN server.
-;push "route 192.168.10.0 255.255.255.0"
-;push "route 192.168.20.0 255.255.255.0"
-
-# If enabled, this directive will configure
-# all clients to redirect their default
-# network gateway through the VPN, causing
-# all IP traffic such as web browsing and
-# and DNS lookups to go through the VPN
-# (The OpenVPN server machine may need to NAT
-# or bridge the TUN/TAP interface to the internet
-# in order for this to work properly).
-push "redirect-gateway def1"
+push "route {{ subnet }}"
 
 # Certain Windows-specific network settings
 # can be pushed to clients, such as DNS
@@ -100,19 +89,8 @@ push "redirect-gateway def1"
 # http://openvpn.net/faq.html#dhcpcaveats
 # The addresses below refer to the public
 # DNS servers provided by opendns.com.
-push "dhcp-option DNS 8.8.8.8"
-push "dhcp-option DNS 208.67.220.220"
-
-# files or common names.  This is recommended
-# only for testing purposes.  For production use,
-# each client should have its own certificate/key
-# pair.
-#
-# IF YOU HAVE NOT GENERATED INDIVIDUAL
-# CERTIFICATE/KEY PAIRS FOR EACH CLIENT,
-# EACH HAVING ITS OWN UNIQUE "COMMON NAME",
-# UNCOMMENT THIS LINE OUT.
-;duplicate-cn
+push "dhcp-option DNS 223.5.5.5"
+push "dhcp-option DNS 223.6.6.6"
 
 # The keepalive directive causes ping-like
 # messages to be sent back and forth over
@@ -132,14 +110,6 @@ cipher AES-128-CBC   # AES
 # If you enable it here, you must also
 # enable it in the client config file.
 comp-lzo
-
-# It's a good idea to reduce the OpenVPN
-# daemon's privileges after initialization.
-#
-# You can uncomment this out on
-# non-Windows systems.
-user nobody
-group nogroup
 
 # The persist options will try to avoid
 # accessing certain resources on restart
@@ -175,4 +145,5 @@ verb 3
 # Username and Password authentication.
 client-cert-not-required
 username-as-common-name
-plugin /usr/lib/openvpn/openvpn-auth-pam.so login
+script-security 3
+auth-user-pass-verify openvpn-auth.py via-env
