Reduce Site-to-Site circuit.
- remove local_ip, protocol_type settings.
- update template display.

--- a/website/vpn/sts/templates/sts/ipsec.conf
+++ b/website/vpn/sts/templates/sts/ipsec.conf
@@ -9,19 +9,7 @@ conn %defualt
         keyexchange=ikev2
         mobike=no
 
-conn xauth
-        leftid=ipsec
-        right=%any
-        authby=xauthpsk
-        xauth=server
-        keyexchange=ikev1
-        aggressive=yes
-        compress=yes
-        ike=aes256-sha1-modp1024!
-        esp=aes256-sha1!
-        dpdaction=clear
-        auto=add
-
+{% if tunnels %}
 {% for tunnel in tunnels %}
 conn {{ tunnel.name }}
         left={{ tunnel.rules.left }}
@@ -34,4 +22,5 @@ conn {{ tunnel.name }}
         esp={{ tunnel.rules.esp }}
         auto={{ tunnel.rules.auto }}
 {% endfor %}
+{% endif %}
 
