Add multiple subnets for openvpn.

--- a/website/vpn/dial/templates/dial/server.conf
+++ b/website/vpn/dial/templates/dial/server.conf
@@ -65,7 +65,9 @@ dh dh2048.pem
 # Each client will be able to reach the server
 # on 10.8.0.1. Comment this line out if you are
 # ethernet bridging. See the man page for more info.
+{% if ipool %}
 server {{ ipool }}
+{% endif %}
 
 # Maintain a record of client <-> virtual IP address
 # associations in this file.  If OpenVPN goes down or
@@ -81,7 +83,11 @@ ifconfig-pool-persist ipp.txt
 # to know to route the OpenVPN client
 # address pool (10.8.0.0/255.255.255.0)
 # back to the OpenVPN server.
+{% if subnets %}
+{% for subnet in subnets %}
 push "route {{ subnet }}"
+{% endfor %}
+{% endif %}
 
 # The keepalive directive causes ping-like
 # messages to be sent back and forth over
