Update directory structure.
- add logs directory.
- add instance directory.
- update requirements.

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@
 *.swp
 *.log
 *.pid
-logs/
+logs/*
 !logs/.gitkeep
 
 # some private files
 artwork/
-instance/
+instance/*
 !instance/application.cfg
