Update cert build script and gunicorn config file for HTTPS.

--- a/scripts/openssl-1.0.0.cnf
+++ b/scripts/openssl-1.0.0.cnf
@@ -181,7 +181,7 @@ basicConstraints=CA:FALSE
 # keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 
 # This will be displayed in Netscape's comment listbox.
-nsComment           = "Easy-RSA Generated Certificate"
+nsComment           = "FlexGW Generated Certificate"
 
 # PKIX recommendations harmless if included in all certificates.
 subjectKeyIdentifier=hash
