Supported 'client-to-client' and 'duplicate-cn' settings for dial vpn.

--- a/website/vpn/dial/templates/dial/server.conf
+++ b/website/vpn/dial/templates/dial/server.conf
@@ -139,6 +139,16 @@ log-append  openvpn.log
 # 9 is extremely verbose
 verb 3
 
+# allow client-to-client
+{% if c2c %}
+client-to-client
+{% endif %}
+
+# allow duplicate
+{% if duplicate %}
+duplicate-cn
+{% endif %}
+
 # Username and Password authentication.
 client-cert-not-required
 username-as-common-name
