--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 Flask==0.10.1
 Flask-Login==0.2.11
+Flask-Migrate==1.2.0
 Flask-SQLAlchemy==1.0
+Flask-Script==2.0.5
 Flask-WTF==0.9.5
 Jinja2==2.7.3
+Mako==1.0.0
 MarkupSafe==0.23
 SQLAlchemy==0.9.6
 WTForms==1.0.5
 Werkzeug==0.9.6
+alembic==0.6.7
 blinker==1.3
 gunicorn==19.1.1
 itsdangerous==0.24
