Supported 'proto' settings for dial vpn.

--- a/website/vpn/dial/templates/dial/server.conf
+++ b/website/vpn/dial/templates/dial/server.conf
@@ -14,7 +14,11 @@ local 0.0.0.0
 port 1194
 
 # TCP or UDP server?
+{% if proto == 'tcp' %}
+proto tcp
+{% else %}
 proto udp
+{% endif %}
 
 # "dev tun" will create a routed IP tunnel,
 # "dev tap" will create an ethernet tunnel.
