Supported custom IKEv2 encryption algorithm, integrity algorithm and dh group.
- ike settings backward compatible v1.1.0 using default value.
- supported esp dh group is null.
- update strongswan.conf file, add ike_name for log.
- add footer for pages.

--- a/website/vpn/sts/templates/sts/ipsec.conf
+++ b/website/vpn/sts/templates/sts/ipsec.conf
@@ -1,26 +1,30 @@
 config setup
-        uniqueids = never
+    uniqueids=never
 
 conn %defualt
-        ikelifetime=60h
-        keylife=20h
-        rekeymargin=3h
-        keyingtries=1
-        keyexchange=ikev2
-        mobike=no
+    ikelifetime=60h
+    keylife=20h
+    rekeymargin=3h
+    keyingtries=1
+    keyexchange=ikev2
+    mobike=no
+    type=tunnel
 
-{% if tunnels %}
+{%- if tunnels %}
 {% for tunnel in tunnels %}
 conn {{ tunnel.name }}
-        left={{ tunnel.rules.left }}
-        leftid={{ tunnel.rules.leftid }}
-        leftsubnet={{ tunnel.rules.leftsubnet }}
-        right={{ tunnel.rules.right }}
-        rightid={{ tunnel.rules.rightid }}
-        rightsubnet={{ tunnel.rules.rightsubnet }}
-        authby={{ tunnel.rules.authby }}
-        esp={{ tunnel.rules.esp }}
-        auto={{ tunnel.rules.auto }}
+    leftid={{ tunnel.rules.leftid }}
+    left={{ tunnel.rules.left }}
+    leftsubnet={{ tunnel.rules.leftsubnet }}
+    rightid={{ tunnel.rules.rightid }}
+    right={{ tunnel.rules.right }}
+    rightsubnet={{ tunnel.rules.rightsubnet }}
+    {#- Backward compatible v1.1.0 #}
+    {%- if tunnel.rules.ike %}
+    ike={{ tunnel.rules.ike }}
+    {%- endif %}
+    esp={{ tunnel.rules.esp }}
+    authby={{ tunnel.rules.authby }}
+    auto={{ tunnel.rules.auto }}
 {% endfor %}
-{% endif %}
-
+{%- endif %}
