Update strongswan settings for IKE_SA duplicheck.
- update app logger level to INFO.

--- a/rc/strongswan.conf
+++ b/rc/strongswan.conf
@@ -5,7 +5,7 @@
 # Configuration changes should be made in the included files
 
 charon {
-    duplicheck.enable = no
+    duplicheck.enable = yes
     load_modular = yes
     filelog {
         /var/log/strongswan.charon.log {
